# ai_imu_odom

./: README.md  requirements.txt
bag_files/: URL.txt
src/ai_odom_3d_ros2/: package.xml  setup.cfg  setup.py
src/ai_odom_3d_ros2/ai_odom_3d_ros2/: inference.py  main.py  model_resnet1d.py  process.py
src/ai_odom_3d_ros2/config/: params.yaml
src/ai_odom_3d_ros2/launch/: ai_odom.launch.py
src/ai_odom_3d_ros2/models/: URL.txt
src/dog_imu_test/: package.xml  setup.cfg  setup.py
src/dog_imu_test/config/: lite3_SLAM.rviz  mapper_params_online_async.yaml  odom_fusion_config.rviz  test_config.rviz  tf_params.yaml
src/dog_imu_test/dog_imu_test/: ekf_node.py  ekf_pos_error.py  flip_odom.py  lidar_odom_repub.py  odom_to_imu_tf_broadcaster.py
src/dog_imu_test/launch/: Lite3_raw_SLAM_launch.py  odometry_fusion_launch.py  slam_test_launch.py
