<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ai_odom_3d_ros2</name>
  <version>0.0.0</version>
  <description>Ai-aided legged robot localization - ROS2 package</description>
  <author email="vidurawarna99@gmail.com">Vidura</author>
  <author email="chhathuranga@gmail.com">Achala</author>
  <maintainer email="vidurawarna99@gmail.com">Vidura</maintainer>
  <license>BSD-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

   <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
